# matcha

./: .gitignore  CMakeLists.txt
modules/: CMakeLists.txt  CMakeMacro.cmake
modules/cl/: CMakeLists.txt
modules/cl/data/samples/: simple_kernels.cl
modules/cl/include/matcha/cl/: cl.hpp
modules/cl/include/matcha/cl/bits/: device_template.hpp  program_template.hpp
modules/cl/source/: CMakeLists.txt  buffer.cpp  buffer.internal.hpp  cl.cpp  command_queue.cpp  command_queue.internal.hpp  context.cpp  device.cpp  event.cpp  event.internal.hpp  internal.hpp  kernel.cpp  kernel.internal.hpp  platform.cpp  program.cpp
modules/cl/tests/: CMakeLists.txt
modules/cl/tests/platform/: CMakeLists.txt  platform.compile.cpp
modules/cl/tools/: CMakeLists.txt
modules/cl/tools/oclc/: CMakeLists.txt
modules/cl/tools/oclc/source/: CMakeLists.txt  main.cpp
modules/core/: CMakeLists.txt
modules/core/include/matcha/core/: any.hpp  config.hpp.in  exception.hpp  option_parser.hpp  optional.hpp  regex.hpp  type.hpp  type_array.hpp
modules/core/include/matcha/core/bits/: optional.extern.hpp
modules/core/source/: CMakeLists.txt  exception.cpp  option_parser.cpp  optional.cpp  regex.cpp
modules/core/tests/optional/: CMakeLists.txt  optional.compile.cpp  optional.simple_test.cpp
modules/core/tests/type_array/: :  CMakeLists.txt  type_array.compile.cpp
modules/distribution/include/matcha/distribution/: listener.hpp
modules/image/: CMakeLists.txt
modules/image/include/matcha/image/: image.hpp  image.templates.hpp
modules/image/source/: CMakeLists.txt  image.cpp
modules/image/source/standard/: image.cpp
modules/image/tests/: CMakeLists.txt
modules/image/tests/image/: CMakeLists.txt  image.compile.cpp
modules/image_io/: CMakeLists.txt
modules/image_io/include/matcha/image/: image_io.hpp
modules/image_io/source/: CMakeLists.txt
modules/image_io/source/linux/: image_io.cpp
modules/math/: CMakeLists.txt
modules/math/include/matcha/math/: constants.hpp  easy_expression.hpp  linear_algebra.hpp  matrix.hpp  matrix_operations.hpp  scalar.hpp  simple_geometory.hpp  stream.hpp  types.hpp  vector.hpp
modules/math/source/: CMakeLists.txt  matrix.cpp
modules/math/source/standard/: easy_expression.cpp  linear_algebra.cpp  matrix.cpp  matrix_operations.cpp  stream.cpp  types.cpp  utilities_i.hpp
modules/math/tests/constants/: CMakeLists.txt  constants.compile.cpp
modules/math/tests/linear_algebra/: CMakeLists.txt  basical.cpp  gemm.cpp
modules/math/tests/matrix/: CMakeLists.txt  matrix.compile.cpp  matrix_operations.cpp
modules/math/tests/scalar/: CMakeLists.txt  scalar.compile.cpp  scalar.operations.cpp
modules/math_opencl/: CMakeLists.txt
modules/math_opencl/include/matcha/math_opencl/: matrix.hpp
modules/math_opencl/source/: CMakeLists.txt  matrix.cpp
modules/math_opencl/source/kernels/: matrix.cl
modules/math_opencl/tests/: CMakeLists.txt
modules/process/: CMakeLists.txt
modules/process/include/matcha/process/: event.hpp  file_port.hpp  handler.hpp  listener.hpp  looper.hpp  port.hpp  process.hpp  sock_port.hpp  socket_port.hpp  timer_port.hpp
modules/process/include/matcha/process/bits/: bits.hpp  bits.linux.hpp  port_implementation_base.hpp
modules/process/source/: CMakeLists.txt  event.cpp  event.internal.cpp  event.internal.hpp  listener.cpp  looper.cpp  port.cpp  socket_port.cpp  timer_port.cpp
modules/process/source/linux/: bits.linux.cpp  listener.internal.cpp  listener.internal.hpp  looper.internal.cpp  looper.internal.hpp  port.internal.cpp  port.internal.hpp  port_implementation_base.cpp  socket_port.internal.cpp  socket_port.internal.hpp  timer_port.internal.cpp  timer_port.internal.hpp
modules/process/tests/: CMakeLists.txt
modules/ui/: CMakeLists.txt
modules/ui/include/matcha/ui/: application.hpp  button.hpp  widget.hpp  window.hpp
modules/ui/source/: CMakeLists.txt  application.cpp  button.cpp  widget.cpp  window.cpp
modules/ui/source/gtk3/: application.internal.cpp  application.internal.hpp  button.internal.cpp  button.internal.hpp  widget.internal.cpp  widget.internal.hpp  window.internal.cpp  window.internal.hpp
modules/ui/tests/: CMakeLists.txt
modules/ui/tests/window/: CMakeLists.txt  window.cpp
